Fix bug with game results, refactor into more readable functions

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: lavenderblush;
     text-align: center;
     margin: 20px auto;
